--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,13 @@
 name = "betting"
 version = "0.1.0"
 edition = "2021"
-
+description = "A crate to manage twitch-style bets (aka 'Parimutuel betting')"
+license = "Unlicense"
+repository = "https://github.com/Inspirateur/betting"
+keywords = ["bets", "betting", "prediction", "wager", "outcome"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
+rusqlite = "0.28"
+itertools = "0.10"
