--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "betting"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "A crate to manage twitch-style bets (aka 'Parimutuel betting')"
 license = "Unlicense"
@@ -12,6 +12,6 @@ keywords = ["bets", "betting", "prediction", "wager", "outcome"]
 anyhow = "1.0"
 rusqlite = { version = "0.28", features = ["bundled"] }
 itertools = "0.10"
-
+thiserror = "1.0"
 [dev-dependencies]
 diesel_cli = {}
